@@ -2,7 +2,6 @@ package cattis.task;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import cattis.exception.CattisException;
 
@@ -18,7 +17,6 @@ import cattis.exception.CattisException;
  */
 public abstract class Task {
     public static final String SPLITTER = "<>";
-    // Date time
     public static final String DATE_TIME_INPUT_FORMATTER = "yyyy-MM-dd";
     public static final String DATE_TIME_OUTPUT_FORMATTER = "MMM dd yyyy";
     private final String taskName;
@@ -39,7 +37,7 @@ public abstract class Task {
      */
     public static Task decode(String payload) throws CattisException {
         List<String> arr = Arrays.stream(payload.split(Task.SPLITTER))
-                .map(String::trim).collect(Collectors.toList());
+                .map(String::trim).toList();
         if (arr.size() < 3) {
             throw new CattisException("Failed to load task from disk");
         }
@@ -47,22 +45,29 @@ public abstract class Task {
         boolean status;
         status = "[X]".equals(arr.get(1));
         String taskName = arr.get(2);
+
+        Task task;
         switch (taskType) {
         case TodoTask.ICON:
-            return new TodoTask(taskName, status);
+            task = new TodoTask(taskName, status);
+            break;
         case DeadlineTask.ICON:
             if (arr.size() != 4) {
                 throw new CattisException("Failed to load task from disk");
             }
-            return new DeadlineTask(taskName, arr.get(3), status);
+            task = new DeadlineTask(taskName, arr.get(3), status);
+            break;
         case EventTask.ICON:
             if (arr.size() != 5) {
                 throw new CattisException("Failed to load task from disk");
             }
-            return new EventTask(taskName, arr.get(3), arr.get(4), status);
+            task = new EventTask(taskName, arr.get(3), arr.get(4), status);
+            break;
         default:
-            return null;
+            task = null;
+            break;
         }
+        return task;
     }
 
     public void mark() {
